[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Player/kit_from_firefox.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/cartoon_wood.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Ground.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Forest_Top.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Platforms/Pad_04_1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Platforms/Tree_1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Level_Complete_100.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/Berries_Gathered.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/Intruders_Down.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/Secrets_Discovered.png" type="Texture" id=10]
[ext_resource path="res://Scripts/LevelComplete.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Menus/Score_Counter.tscn" type="PackedScene" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 56, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 56, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 56, 80 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
} ]

[node name="Level_Complete" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decoration_Top" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 0.237
margin_bottom = 0.039978
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decoration_Shrooms" type="TextureRect" parent="Background"]
anchor_top = 0.778
anchor_right = 1.0
anchor_bottom = 1.193
margin_left = -40.0
margin_top = -0.240051
margin_right = 40.0
margin_bottom = -0.440063
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeStump" type="TextureRect" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -600.0
margin_top = -296.0
margin_right = -384.0
margin_bottom = -214.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Background/TreeStump"]
position = Vector2( 112, -29 )
frames = SubResource( 4 )
animation = "idle"
frame = 2
playing = true
flip_h = true

[node name="Decoration_Bottom" type="TextureRect" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1080.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -242.0
margin_bottom = 242.0
custom_constants/separation = 120
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_left = 468.0
margin_right = 1452.0
margin_bottom = 82.0
size_flags_horizontal = 4
texture = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 1920.0
margin_bottom = 484.0
custom_constants/margin_left = 300

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 300.0
margin_right = 1217.0
margin_bottom = 282.0
size_flags_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 777.0
margin_bottom = 282.0
custom_constants/separation = 60

[node name="Berries" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 777.0
margin_bottom = 54.0
texture = ExtResource( 8 )

[node name="Enemies" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 777.0
margin_bottom = 168.0
texture = ExtResource( 9 )

[node name="Secrets" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 777.0
margin_bottom = 282.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 781.0
margin_right = 917.0
margin_bottom = 282.0
custom_constants/margin_left = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 136.0
margin_bottom = 282.0
size_flags_horizontal = 2
custom_constants/separation = 60

[node name="Berries_Counter" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 86.0
margin_bottom = 54.0
count = 35

[node name="Enemies_Counter" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 114.0
margin_right = 86.0
margin_bottom = 168.0

[node name="Secrets_Counter" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 228.0
margin_right = 86.0
margin_bottom = 282.0
